# promp-cpp

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  promp_example.cpp  promp_example_readme.cpp
include/: robotics.hpp
include/robotics/: basis_functions.hpp  full_promp.hpp  json_factories.hpp  promp.hpp  trajectory.hpp  utils.hpp
include/robotics/utils/: chrono.hpp  math.hpp  promp_utils.hpp  random.hpp
src/robotics/: basis_functions.cpp  full_promp.cpp  json_factories.cpp  promp.cpp  utils.cpp
src/robotics/utils/: chrono.cpp  math.cpp  promp_utils.cpp  random.cpp
tests/: CMakeLists.txt  basis_functions_test.cpp  full_promp_test.cpp  gaussian_kernel_test.txt  loose_poly_promp_1d.txt  promp.json  promp_marg.json  promp_test.cpp  promp_utils_test.cpp  random_test.cpp  test_simple_promp_in.txt  test_simple_promp_out.txt  utils_math_test.cpp
